Added GitHub links to landing page and universal footer

--- a/views/includes/footer.html
+++ b/views/includes/footer.html
@@ -16,6 +16,7 @@
                 <ul class="social-footer">
                     <li><a href="https://www.facebook.com/TurnerLogic?_rdr=p"><i class="fa fa-facebook"></i></a></li>
                     <li><a href="https://twitter.com/TurnerLogic"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="https://github.com/TurnerLogic"><i class="fa fa-github"></i></a></li>
                 </ul>
             </div>
             <!-- End: Footer Map -->
