Added a GitHub fork ribbon

--- a/views/index.html
+++ b/views/index.html
@@ -50,22 +50,17 @@
 
 #github-fork {
 	display: inline-block;
-	border: 1px dashed #1F4A0C;
+	border: 1px dashed #2C303F;
+	width: 200px;
 	color: #fff;
-	background-color: #1F4A0C
+	background-color: #1F4A0C;
 	-webkit-transform: skew(0deg);
     -moz-transform: skew(0deg);
     transform: skew(0deg);
 }
 
-#github-fork button {
-	background-color: #1F4A0C;
-	margin: 0;
-	padding: 5px 10px;
-	border: 0px;
-}
-
 #github-fork a {
+	background-color: transparent;
 	color: white;
 	font-weight: 500;
 }
@@ -108,7 +103,7 @@
 					<li>
 						<div id="fork-wrapper">
 							<div id="github-fork">
-								<button><a href="https://github.com/TurnerLogic/pollgeni.us">Fork me on GitHub!</a></button>
+								<a href="https://github.com/TurnerLogic/pollgeni.us">Fork me on GitHub!</a>
 							</div>
 						</div>
 					</li>
